k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api
  namespace: notes
spec:
  type: LoadBalancer
  selector:
    app: notes-api
  ports:
    - port: 80
      targetPort: 3000
